se corrigio a nivel backend