@@ -1,7 +1,8 @@
 package com.example.backend.controller;
 
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -22,6 +23,7 @@ import com.example.backend.service.PasswordResetService;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
 
 @RestController
 @RequestMapping("/api/auth")
@@ -44,6 +46,7 @@ public class AuthController {
         this.jwtUtil = jwtUtil;
     }
 
+    // ================= PING =================
     @GetMapping("/ping")
     public ResponseEntity<String> ping() {
         logger.info("🎏 Ping recibido en /api/auth/ping");
@@ -52,13 +55,17 @@ public class AuthController {
 
     // ================= LOGIN =================
     @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody LoginRequest request) {
+    public ResponseEntity<?> login(@RequestBody @Valid LoginRequest request) {
         try {
             authenticationManager.authenticate(
                     new UsernamePasswordAuthenticationToken(request.correo(), request.contrasena())
             );
 
             Usuario usuario = authService.findByCorreo(request.correo());
+
+            if (usuario == null) {
+                return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Usuario no encontrado");
+            }
 
             if (!usuario.isActivo()) {
                 return ResponseEntity.status(HttpStatus.FORBIDDEN)
@@ -67,51 +74,68 @@ public class AuthController {
 
             String token = jwtUtil.generateToken(usuario.getCorreo());
 
-            List<Rol> roles = authService.getRoles(usuario.getId());
-            List<String> permisos = roles.stream()
-                    .flatMap(r -> r.getPermisos().stream())
-                    .map(p -> p.getNombre())
-                    .distinct()
-                    .collect(Collectors.toList());
+            List<String> roles = usuario.getRoles() != null
+                    ? usuario.getRoles().stream().map(Rol::getNombre).toList()
+                    : List.of();
+
+            List<String> permisos = List.of(); // Por ahora vacío
 
             Profesional profesional = authService.getProfesionalByUsuarioId(usuario.getId());
+            if (profesional == null) profesional = new Profesional(); // Opcional
 
-            return ResponseEntity.ok(new JwtLoginResponse(token,
-                    roles.stream().map(Rol::getNombre).toList(),
+            return ResponseEntity.ok(new JwtLoginResponse(
+                    token,
+                    roles,
                     permisos,
                     profesional));
 
         } catch (AuthenticationException e) {
-            logger.warn("❌ Fallo de login: credenciales inválidas");
+            logger.warn("❌ Fallo de login para {}: credenciales inválidas", request.correo());
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Credenciales inválidas");
         } catch (Exception e) {
-            logger.error("❌ Error inesperado en login: {}", e.getMessage());
+            logger.error("❌ Error inesperado en login: {}", e.getMessage(), e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error en el servidor");
         }
     }
 
     // ================= REGISTRO =================
     @PostMapping("/register")
-    public ResponseEntity<?> register(@RequestBody RegisterRequest request) {
-        Usuario usuario = authService.registerAndReturnUser(request.correo(), request.contrasena());
+    public ResponseEntity<?> register(@RequestBody @Valid RegisterRequest request) {
+        try {
+            Set<String> rolesSet = request.roles() != null ? new HashSet<>(request.roles()) : new HashSet<>();
 
-        if (usuario == null) {
-            return ResponseEntity.badRequest().body("El usuario ya existe.");
+            // ⚡ Corrección: ahora pasamos los 7 parámetros requeridos
+            Usuario usuario = authService.registerAndReturnUser(
+                    request.correo(),
+                    request.contrasena(),
+                    request.nombres(),
+                    request.apellidos(),
+                    request.tipoDocumento(),
+                    request.documento(),
+                    rolesSet
+            );
+
+            if (usuario == null) {
+                return ResponseEntity.badRequest().body("El usuario ya existe.");
+            }
+
+            Profesional profesional = new Profesional();
+            profesional.setUsuario(usuario);
+            profesional.setNombres(request.nombres());
+            profesional.setApellidos(request.apellidos());
+            profesional.setDocumento(request.documento());
+            profesional.setTipoDocumento(request.tipoDocumento());
+            profesional.setTelefono(request.telefono());
+
+            authService.saveProfesional(profesional);
+
+            logger.info("✅ Usuario {} registrado correctamente", request.correo());
+            return ResponseEntity.ok("Usuario registrado correctamente. Pendiente de aprobación por el área TI.");
+
+        } catch (Exception e) {
+            logger.error("❌ Error en registro: {}", e.getMessage(), e);
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error en el servidor");
         }
-
-        Profesional profesional = new Profesional();
-        profesional.setUsuario(usuario);
-        profesional.setNombres(request.nombres());
-        profesional.setApellidos(request.apellidos());
-        profesional.setDocumento(request.documento());
-        profesional.setTipoDocumento(request.tipoDocumento());
-        profesional.setTelefono(request.telefono());
-
-        authService.saveProfesional(profesional);
-
-        authService.assignRole(usuario.getId(), "COORDINADOR_MEDICO");
-
-        return ResponseEntity.ok("Usuario registrado correctamente. Pendiente de aprobación por el área TI.");
     }
 
     // ================= RECUPERACIÓN DE CONTRASEÑA =================
@@ -132,12 +156,13 @@ public class AuthController {
     // ================= DTOs =================
     public record RegisterRequest(
             @NotBlank @Email String correo,
-            @NotBlank String contrasena,
+            @NotBlank @Size(min = 6, message = "La contraseña debe tener al menos 6 caracteres") String contrasena,
             @NotBlank String nombres,
             @NotBlank String apellidos,
             @NotBlank String tipoDocumento,
-            @NotBlank String documento,
-            String telefono
+            @NotBlank @Size(min = 6, max = 20) String documento,
+            String telefono,
+            List<String> roles // ahora permitimos múltiples roles
     ) {}
 
     public record LoginRequest(
@@ -151,7 +176,7 @@ public class AuthController {
 
     public record ResetPasswordRequest(
             @NotBlank String token,
-            @NotBlank String newPassword
+            @NotBlank @Size(min = 6) String newPassword
     ) {}
 
     // ================= RESPUESTA =================
